--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Aris Project</title>
-  <link rel="icon" href="../resources/small-logo.png">
+  <link rel="icon" href="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055612/Aris%20Project/betmtuanjlielhle2s5p.png">
 </head>
 <header>
   <nav class="navBar">
     <div class="navBar-container">
       <logo>
           <a href="index.html">
-            <img class="logo" src="../resources/main-logo.png">
+            <img class="logo" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/rcdoucc5xfntiozfuyi8.png">
           </a>
       </logo>
       <ul class="navLinks">
@@ -34,7 +34,7 @@
 </header>
 <body>
   <div class="body-div0">
-    <img class="no-drag" src="../resources/nobackground-container.png">
+    <img class="no-drag" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/dypd1w0kmpmmvtds6jmm.png">
     <div class="div-text">
         <h2>Uñas y tips</h2>
         <p>
@@ -44,14 +44,14 @@
     </div>
   </div>
   <div class="body-div1">
-    <img class="no-drag" src="../resources/second-container.png">
+    <img class="no-drag" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/wogvlmn3ibqb6zrq3n4s.png">
     <div class="div-text">
         <h2>Maquillaje profesional</h2>
         <p>Lo mejor para ti</p>
     </div>
   </div>
   <div class="body-div2">
-    <img class="no-drag" src="../resources/nobackground-container.png">
+    <img class="no-drag" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/dypd1w0kmpmmvtds6jmm.png">
     <div class="div-text">
         <h2>Container 2</h2>
         <p>Text Container 2</p>
@@ -59,13 +59,13 @@
   </div>
   <div class="socialNetwork">
     <a href="https://www.facebook.com/" target="_blank">
-      <img class="facebook-logo" src="../resources/facebook-logo.png">
+      <img class="facebook-logo" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055612/Aris%20Project/frde0voshet2qvrrs0f2.png">
     </a>
     <a href="https://www.instagram.com" target="_blank">
-      <img class="instagram-logo" src="../resources/instagram-logo.png">
+      <img class="instagram-logo" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/ix0jvv32gv90buqo9zji.png">
     </a>
     <a href="https://www.tiktok.com" target="_blank">
-      <img class="tiktok-logo" src="../resources/tiktok-logo.png">
+      <img class="tiktok-logo" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055612/Aris%20Project/hcgcr8qy5mmmopukknml.png">
     </a>
   </div>
 </body>
