--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   <nav class="navBar">
     <div class="navBar-container">
       <logo>
-          <a href="index.html">
-            <img class="logo" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/rcdoucc5xfntiozfuyi8.png">
-          </a>
+          <img class="logo" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/rcdoucc5xfntiozfuyi8.png">
       </logo>
       <ul class="navLinks">
         <li>
-          <a class="link-Text" href="#">Inicio</a>
+          <a class="link-Text" href="index.html">Inicio</a>
         </li>
         <li>
           <a href="#">Servicios</a>
@@ -44,7 +42,7 @@
     </div>
   </div>
   <div class="body-div1">
-    <img class="no-drag" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/wogvlmn3ibqb6zrq3n4s.png">
+    <img class="no-drag" src="https://res.cloudinary.com/dggjfqpsx/image/upload/v1688055613/Aris%20Project/dypd1w0kmpmmvtds6jmm.png">
     <div class="div-text">
         <h2>Maquillaje profesional</h2>
         <p>Lo mejor para ti</p>
